iceberg/hive/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hive-metastore
  labels:
    app: hive-metastore
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hive-metastore
  template:
    metadata:
      labels:
        app: hive-metastore
    spec:
      containers:
        - name: hive-metastore
          image: hive-iceberg:dev
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9083
          command:
            - /opt/hive/bin/hive
          args:
            - --service
            - metastore
            - -p
            - "9083"
          volumeMounts:
            - name: hive-config
              mountPath: /opt/hive/conf
      volumes:
        - name: hive-config
          secret:
            secretName: services.iceberg.raw-hive-conf
